--- a/src/main/resources/templates/addsongform.html
+++ b/src/main/resources/templates/addsongform.html
@@ -7,7 +7,8 @@
 <body>
     <form action="/savesong" th:object="${theSong}" method="post">
         <input type="text" th:field="*{title}">
-            <select th:field="*{leadArtiste}">
+        <input type="hidden" th:field="*{leadArtiste}">
+            <select th:field="*{leadArtiste}" multiple>
                  <option th:each="eachArtiste:${allartistes}"  th:value="${eachArtiste.id}" th:text="${eachArtiste.stageName}==null?${eachArtiste.fullName}:${eachArtiste.stageName}"></option>
              </select>
              <button type="submit">Save</button>
